# Code

Backend Development/: index.js  package-lock.json  package.json
Bash/: comparing.sh  looping.bash
C++/: a.out  move_zeroes_leetcode283.cpp
CP and DSA/: CMakeLists.txt
CP and DSA/Competitive programming/: a.out  linked_list.cpp
CP and DSA/Competitive programming/Codeforces/: a.out  main  main.cpp
CP and DSA/Competitive programming/Codeforces/.cph/: .main.cpp_8a8fb53bed3b946a9e1f18066c747d3b.prob
CP and DSA/Competitive programming/TLE Eleminators/C++ STL/: a.out  three  three.cpp
CP and DSA/DSA/Linked List/: basic_linked_list.cpp
CP and DSA/Leetcode/: one  one.cpp
College Project/: .~lock.Social media application by Roll no 55.pdf#
Competitive programming/: Code.cpp  a.out
Cpp/: new.cpp
Css/: css-grid.html  flexbox.html  font.html  more_on_selectors.html  one.html  position.html  transformers.html  transition.html
DSA/: Code.cpp  a.out
HTML/: forms.html  inputs.html
JAVA/: experiment.java
Java Learning/: experiment.java
Java Practice/: palindrome.java  prime_numbers.java  stack_class.java  swap_n_factorial.java
JavaScript/DOM/: third.html
PYTHON/: cnt_positives.py  swap_two_numbers.py  use_of_functions.py
Php/: one.php
Python/: ascending_and_descending.py  cnt_positives.py  fibonacci_series.py  find_area_of_circle.py  lambda_function.py  print_duplicates.py  useOf_range_function.py  use_of_functions.py
SQL/: Untitled-1.txt  mybase.db  practice.sql
Sql/: one.sql  practice.sql
Tailwind/: experiment-1.html  index.html  main.html
(+208 files in other folders)
